moved around title and changed border size

--- a/Spooder/css/style.css
+++ b/Spooder/css/style.css
@@ -6,7 +6,9 @@ h1 {
   border: 10px groove;
   border-color: #69fddf;
   margin-top: 10px;
-  margin-bottom: 30px
+  margin-bottom: 40px;
+  width:70%;
+  margin:50px auto;
 }
 
 body {
